<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iiitd.nehacompany.datastrorage_a3.FileStorageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fileStorage"
        android:id="@+id/mainTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/contact"
        android:id="@+id/contactTextView"
        android:layout_below="@+id/mainTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/contactEditText"
        android:layout_alignTop="@+id/contactTextView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/contactTextView" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveToInternal"
        android:id="@+id/btnSaveToInternal"
        android:layout_below="@+id/contactEditText"
        android:layout_alignStart="@+id/btnGetFromInternal"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getFromInternal"
        android:id="@+id/btnGetFromInternal"
        android:layout_below="@+id/btnSaveToInternal"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveToExternal"
        android:id="@+id/btnSaveToExternal"
        android:layout_below="@+id/btnGetFromInternal"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getFromExternal"
        android:id="@+id/btnGetFromExternal"
        android:layout_below="@+id/btnSaveToExternal"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext2"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/contactEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveToExternalPrivate"
        android:id="@+id/btnSaveToExternalPrivate"
        android:layout_below="@+id/btnGetFromExternal"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getFromExternalPrivate"
        android:id="@+id/btnGetFromExternalPrivate"
        android:layout_below="@+id/btnSaveToExternalPrivate"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
