<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="iiitd.nehacompany.datastrorage_a3.SQLStorageActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SQLite"
        android:id="@+id/tvSQLite"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/tv_name"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/tvSQLite"
        android:layout_alignStart="@+id/editText_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_name"
        android:layout_below="@+id/tv_name"
        android:layout_alignEnd="@+id/tvSQLite"
        android:layout_marginTop="24dp"
        android:layout_alignStart="@+id/tvSQLite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/favouriteBook"
        android:id="@+id/tv_favouriteBook"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/editText_name"
        android:layout_alignStart="@+id/tv_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_favouriteBook"
        android:layout_below="@+id/tv_favouriteBook"
        android:layout_alignEnd="@+id/tvSQLite"
        android:layout_marginTop="24dp"
        android:layout_alignStart="@+id/tvSQLite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/favouriteNumber"
        android:id="@+id/tv_favouriteNumber"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/editText_favouriteBook"
        android:layout_alignStart="@+id/editText_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_favouriteNumber"
        android:layout_below="@+id/tv_favouriteNumber"
        android:layout_alignEnd="@+id/tvSQLite"
        android:layout_marginTop="24dp"
        android:layout_alignStart="@+id/tvSQLite" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/btnSaveSQLite"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/editText_favouriteNumber"
        android:layout_alignStart="@+id/editText_favouriteNumber" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UPDATE"
        android:id="@+id/btnUpdateSQLite"
        android:layout_alignTop="@+id/btnSaveSQLite"
        android:layout_toEndOf="@+id/tv_favouriteNumber" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GET"
        android:id="@+id/btnGetSQLite"
        android:layout_below="@+id/btnSaveSQLite"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
